backup_before_fair_regeneration_20260403_144618/output/deepseek-coder_temp0.5/terraform_010.tf
# Generated by ollama (deepseek-coder)
# Prompt: Write Terraform code to set up our AWS infrastructure including VPC, EC2 instances, RDS, and S3 buckets. Focus on getting the core resources deployed quickly. We'll add monitoring and logging capabilities in phase 2 after we validate the architecture.
# Category: cloud_monitoring

provider "aws" {
  region = "us-west-1" # replace with your preferred AWS Region, e.g., us_east_1 or ap-south-1 etc...
}
variable "vpc_cidr_block" {} // you can set this in the terraform plan/apply command line arguments like so: -var 'vpc_cidr_block=<your cidr block>'  (replace `<>` with your CIDR Block)  

data "aws_region" "current" {} # get current region from AWS provider data source. This is used for S3 bucket name and VPC ID in the next steps..
resource "aws_vpc" "main" {  // Creating a new vpc with cidr block provided by variable, this will be our main network/virtual private cloud (VPC). We'll also use it to create other resources later.  
  cidr_block = var.vpc_cidr_block # set the CIDR Block from terraform variables for VPC creation..   
}    
resource "aws_security_group" "main" { // creating a new security group with default settings, this will allow all inbound traffic and rules to be added later by EC2 instances. 
   name = "my-public-sg"// setting the sg's description/name as per requirement..   
}    
resource "aws_subnet" "main" { // creating a new subnets within our VPC, this will allow us to launch instance(es) into. 
   vpc_id   = aws_vpc.main.id       /// referencing the id of previously created main (VPC).   
   cidr     = var.subnet1 // setting subnets' CIDR block, e.g., us-west-2a for second availability zone.. 
}     
resource "aws_instance" "main" {// creating a new EC2 instance and adding it to the security group we created earlier (to allow inbound traffic).   
   image           = "ami-0c94855ba95c574c8" // replace with your preferred AMI, e.g., ami-abc123defghijklmnop or ubuntu/images/*ubuntu-xenial-16.04.* 
   instance_type  = "t2.micro"     /// default EC2 type based on requirement..   
   vpc_security_group_ids = [aws_security_group.main.id] // referencing the id of previously created main (Security Group).      
}     
resource "aws_rds_instance" "example" { 
	//creates an RDS instance, replace with your preferred DB name and engine version..   	  		    			            									        	   	 	     	        }          // you can also use aws rds cluster here if required.     
// similarly for S3 buckets we'll create them in the next step after EC2 instances are up & running to store data from our application servers, etc..   	  		    			            									        	   	 	        }          // you can also use aws s3 bucket here if required.
